--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,32 @@
 /*Обнуление*/
-*{
+* {
 	padding: 0;
 	margin: 0;
 	border: 0;
 }
-*,*:before,*:after{
+*,
+*:before,
+*:after {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-nav,footer,header,aside{display: block;}
-html,body{
+:focus,
+:active {
+	outline: none;
+}
+a:focus,
+a:active {
+	outline: none;
+}
+nav,
+footer,
+header,
+aside {
+	display: block;
+}
+html,
+body {
 	height: 100%;
 	width: 100%;
 	font-size: 100%;
@@ -22,19 +36,47 @@ html,body{
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
-input,button,textarea{font-family:inherit;}
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+input,
+button,
+textarea {
+	font-family: inherit;
+}
+input::-ms-clear {
+	display: none;
+}
+button {
+	cursor: pointer;
+}
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+a,
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+}
+ul li {
+	list-style: none;
+}
+img {
+	vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: inherit;
+	font-weight: 400;
+}
 /*--------------------*/
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
-.body{
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+.body {
 }
 a {
 	color: inherit;
@@ -43,24 +85,26 @@ a:hover {
 	color: var(--red);
 }
 .banner {
+	--yellow: #fed100;
+	--black: #333333;
+	--red: #ff352b;
+	--white: #f2f2f2;
 	font-size: 16px;
 	background-color: var(--yellow);
-	--yellow: #FED100;
-	--black: #333333;
-	--red: #FF352B;
-	--white: #F2F2F2;
 }
 .container {
-	padding-top: 2.5rem;
+	padding: 2.5rem 1rem 0 1rem;
 	color: var(--black);
-	font-family: 'Montserrat', sans-serif;
-	max-width: 83rem;
-	margin: 0rem auto;
+	font-family: "Montserrat", sans-serif;
+	max-width: 85rem;
+	margin: 0 auto;
 }
 .header {
 	max-width: 82rem;
 	display: flex;
 	justify-content: space-between;
+	position: relative;
+	z-index: 2;
 }
 .header__logo {
 	font-size: 2rem;
@@ -74,7 +118,8 @@ a:hover {
 	gap: 2rem;
 	align-items: center;
 }
-.header__link {}
+.header__link {
+}
 .header__phone {
 	font-size: 1.5rem;
 	text-decoration: underline 1px;
@@ -88,7 +133,7 @@ a:hover {
 	flex: 0 1 50%;
 }
 .banner__title {
-	max-width: 30rem;
+	max-width: 35rem;
 	font-size: 4rem;
 	font-weight: 700;
 	font-size: 70px;
@@ -106,6 +151,7 @@ a:hover {
 	font-size: 1.5rem;
 	margin-top: 1.5rem;
 	outline: var(--white) solid 2px;
+	cursor: pointer;
 }
 .banner__bullets {
 	display: flex;
@@ -125,8 +171,34 @@ a:hover {
 .banner__image {
 	max-width: 35rem;
 	margin-top: -6rem;
+	position: relative;
+	z-index: 0;
 }
 .banner__image img {
-width: 100%;
-height: 100%;
+	width: 100%;
+	height: 100%;
+}
+@media (max-width: 1000px) {
+	.banner__content {
+		display: block;
+	}
+	.banner__image {
+		margin: 0 auto;
+	}
+	.banner__info {
+		text-align: center;
+		flex: none;
+	}
+	.banner__title {
+		margin: 0 auto;
+	}
+	.banner__bullets {
+		margin: 0 auto;
+		margin-top: 2rem;
+	}
+}
+@media (max-width: 690px) {
+	.header__menu {
+		display: none;
+	}
 }
