--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a:hover {
 	color: var(--black);
 	font-family: "Montserrat", sans-serif;
 	max-width: 85rem;
-	margin: 0 auto;
+	margin: 0 1rem;
 }
 .header {
 	padding: 2.5rem 1rem 0 1rem;
@@ -176,24 +176,33 @@ a:hover {
 	width: 100%;
 	height: 100%;
 }
-@media (max-width: 1000px) {
+@media (max-width: 997px) {
 	.banner__image {
 		display: none;
 	}
 	.banner__bullets {
-		display: inline-block;
-		margin-top: 2rem;
+		gap: 2rem;
+		margin-bottom: 4rem;
 	}
 	.banner__content {
 		margin-top: 3rem;
 	}
 }
-@media (max-width: 670px) {
+@media (max-width: 715px) {
 	.header__menu {
 		display: none;
 	}
 }
-@media (max-width: 450px) {
+@media (max-width: 510px) {
+	.banner__content {
+		margin-top: 2rem;
+	}
+	.header {
+		align-items: center;
+	}
+	.header__phone {
+		font-size: 1.2rem;
+	}
 	.banner__title {
 		font-size: 3rem;
 		font-weight: 700;
@@ -201,15 +210,16 @@ a:hover {
 	.banner__subtitle {
 		font-size: 1.8rem;
 	}
-	.banner__content {
-		margin-top: 2rem;
+	.banner__bullets {
+		flex-wrap: wrap;
+		gap: 0.5rem;
+		text-align: left;
+		margin: 2rem 0;
+		max-width: 12rem;
 	}
-}
-@media (max-width: 350px) {
-	.banner__title {
-		font-size: 3rem;
-		font-weight: 700;
-	}
+	/*.banner__bullets p:nth-child(2, 3) {
+		margin-left: 10rem;
+	}*/
 }
 .stages {
 	background-color: var(--white);
