--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,8 @@ a:hover {
 	color: var(--black);
 	font-family: "Montserrat", sans-serif;
 	max-width: 85rem;
-	margin: 0 1rem;
+	margin: 0 auto;
+	padding: 0 1rem;
 }
 .header {
 	padding: 2.5rem 1rem 0 1rem;
@@ -217,9 +218,9 @@ a:hover {
 		margin: 2rem 0;
 		max-width: 12rem;
 	}
-	/*.banner__bullets p:nth-child(2, 3) {
-		margin-left: 10rem;
-	}*/
+	.banner__icon img {
+		width: 45px;
+	}
 }
 .stages {
 	background-color: var(--white);
