--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,6 @@
-/*Обнуление*/
-* {
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-*,
-*:before,
-*:after {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-:focus,
-:active {
-	outline: none;
-}
-a:focus,
-a:active {
-	outline: none;
-}
-nav,
-footer,
-header,
-aside {
-	display: block;
-}
-html,
-body {
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-input,
-button,
-textarea {
-	font-family: inherit;
-}
-input::-ms-clear {
-	display: none;
-}
-button {
-	cursor: pointer;
-}
-button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
-}
-a,
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: none;
-}
-ul li {
-	list-style: none;
-}
-img {
-	vertical-align: top;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-size: inherit;
-	font-weight: 400;
-}
-/*--------------------*/
-
+@import "./reset.css";
+@import "./banner.css";
+@import "./stages.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 .body {
 }
@@ -83,172 +9,4 @@ a {
 }
 a:hover {
 	color: var(--red);
-}
-.banner {
-	--yellow: #fed100;
-	--black: #333333;
-	--red: #ff352b;
-	--white: #f2f2f2;
-	font-size: 16px;
-	background-color: var(--yellow);
-}
-.container {
-	color: var(--black);
-	font-family: "Montserrat", sans-serif;
-	max-width: 85rem;
-	margin: 0 auto;
-	padding: 0 1rem;
-}
-.header {
-	padding: 2.5rem 1rem 0 1rem;
-	max-width: 82rem;
-	display: flex;
-	justify-content: space-between;
-	position: relative;
-	z-index: 2;
-}
-.header__logo {
-	font-size: 2rem;
-	font-weight: 600;
-}
-.header__menu {
-	display: flex;
-	justify-content: space-between;
-	list-style-type: none;
-	font-size: 1rem;
-	gap: 2rem;
-	align-items: center;
-}
-.header__link {
-}
-.header__phone {
-	font-size: 1.5rem;
-	text-decoration: underline 1px;
-	font-weight: 600;
-}
-.banner__content {
-	display: flex;
-	margin-top: 4rem;
-}
-.banner__info {
-	flex: 0 1 50%;
-}
-.banner__title {
-	font-size: 4.5rem;
-	font-weight: 700;
-}
-.banner__subtitle {
-	font-size: 2rem;
-	font-weight: 600;
-	margin-top: 1.5rem;
-}
-.banner__button {
-	padding: 1rem 6rem;
-	color: var(--white);
-	background-color: var(--red);
-	display: inline-block;
-	font-size: 1.5rem;
-	margin-top: 1.5rem;
-	outline: var(--white) solid 2px;
-	cursor: pointer;
-}
-.banner__bullets {
-	display: flex;
-	justify-content: space-between;
-	max-width: 34rem;
-	align-items: center;
-	margin-top: 4rem;
-}
-.banner__bullet {
-	font-size: 1rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	font-weight: 400;
-	gap: 0.5rem;
-}
-.banner__image {
-	max-width: 35rem;
-	margin-top: -6rem;
-	position: relative;
-	z-index: 0;
-}
-.banner__image img {
-	width: 100%;
-	height: 100%;
-}
-@media (max-width: 997px) {
-	.banner__image {
-		display: none;
-	}
-	.banner__bullets {
-		gap: 2rem;
-		margin-bottom: 4rem;
-	}
-	.banner__content {
-		margin-top: 3rem;
-	}
-}
-@media (max-width: 715px) {
-	.header__menu {
-		display: none;
-	}
-}
-@media (max-width: 510px) {
-	.banner__content {
-		margin-top: 2rem;
-	}
-	.header {
-		align-items: center;
-	}
-	.header__phone {
-		font-size: 1.2rem;
-	}
-	.banner__title {
-		font-size: 3rem;
-		font-weight: 700;
-	}
-	.banner__subtitle {
-		font-size: 1.8rem;
-	}
-	.banner__bullets {
-		flex-wrap: wrap;
-		gap: 0.5rem;
-		text-align: left;
-		margin: 2rem 0;
-		max-width: 12rem;
-	}
-	.banner__icon img {
-		width: 45px;
-	}
-}
-.stages {
-	background-color: var(--white);
-}
-.stages__title {
-	margin: 6rem 0 3.75rem 0;
-	font-weight: 600;
-	font-size: 2rem;
-	text-align: center;
-}
-.stages__items {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	gap: 4rem 8rem;
-}
-.stages__item {
-	max-width: 26rem;
-}
-.stages__number {
-	font-weight: 300;
-	font-size: 3rem;
-}
-.stages__text {
-	font-weight: 500;
-	font-size: 1.25rem;
-}
-.stages__descr {
-	font-weight: 400;
-	font-size: 1rem;
 }
