--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./reset.css";
 @import "./banner.css";
 @import "./stages.css";
+@import "./prices.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 .body {
 }
