--- a/css/banner.css
+++ b/css/banner.css
@@ -1,17 +1,13 @@
 .banner {
-	--yellow: #fed100;
-	--black: #333333;
-	--red: #ff352b;
-	--white: #f2f2f2;
 	font-size: 16px;
 	background-color: var(--yellow);
 }
-.container {
+.banner__container {
+	margin: 0 auto;
+	padding: 0 1rem;
 	color: var(--black);
 	font-family: "Montserrat", sans-serif;
 	max-width: 85rem;
-	margin: 0 auto;
-	padding: 0 1rem;
 }
 .header {
 	padding: 2.5rem 1rem 0 1rem;
@@ -41,8 +37,8 @@
 	font-weight: 600;
 }
 .banner__content {
-	display: flex;
 	margin-top: 4rem;
+	display: flex;
 }
 .banner__info {
 	flex: 0 1 50%;
@@ -52,26 +48,26 @@
 	font-weight: 700;
 }
 .banner__subtitle {
+	margin-top: 1.5rem;
 	font-size: 2rem;
 	font-weight: 600;
-	margin-top: 1.5rem;
 }
 .banner__button {
 	padding: 1rem 6rem;
+	margin-top: 1.5rem;
 	color: var(--white);
 	background-color: var(--red);
 	display: inline-block;
 	font-size: 1.5rem;
-	margin-top: 1.5rem;
 	outline: var(--white) solid 2px;
 	cursor: pointer;
 }
 .banner__bullets {
+	margin-top: 4rem;
 	display: flex;
 	justify-content: space-between;
 	max-width: 34rem;
 	align-items: center;
-	margin-top: 4rem;
 }
 .banner__bullet {
 	font-size: 1rem;
@@ -82,8 +78,8 @@
 	gap: 0.5rem;
 }
 .banner__image {
-	max-width: 35rem;
 	margin-top: -6rem;
+	max-width: 35rem;
 	position: relative;
 	z-index: 0;
 }
@@ -96,8 +92,8 @@
 		display: none;
 	}
 	.banner__bullets {
-		gap: 2rem;
 		margin-bottom: 4rem;
+		gap: 2rem;
 	}
 	.banner__content {
 		margin-top: 3rem;
@@ -126,10 +122,10 @@
 		font-size: 1.8rem;
 	}
 	.banner__bullets {
+		margin: 2rem 0;
 		flex-wrap: wrap;
 		gap: 0.5rem;
 		text-align: left;
-		margin: 2rem 0;
 		max-width: 12rem;
 	}
 	.banner__icon img {
