--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@
 @import "./stages.css";
 @import "./prices.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-.body {
+.content {
+	--yellow: #fed100;
+	--black: #333333;
+	--red: #ff352b;
+	--white: #f2f2f2;
 }
 a {
 	color: inherit;
