--- a/css/prices.css
+++ b/css/prices.css
@@ -20,14 +20,19 @@
 }
 .prices__row {
 	margin-bottom: 3.75rem;
+	display: flex;
 	justify-content: space-between;
 }
 .prices__column {
 	border: 1px solid #ebebeb;
 	background-color: #ffffff;
-	max-width: 26rem;
-	max-height: 36rem;
+	width: 26rem;
+	height: 36rem;
 	text-align: center;
+	box-sizing: border-box;
+}
+.prices__column:hover {
+	border: 1px solid var(--yellow);
 }
 .prices__column h4 {
 	margin-top: 5.25rem;
@@ -49,7 +54,7 @@
 	font-size: 2rem;
 }
 .prices__button {
-	margin: 0 auto 5rem;
+	margin: 0 auto;
 	background-color: var(--yellow);
 	max-width: 15.5rem;
 	max-height: 5.5rem;
