--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import "./stages.css";
 @import "./prices.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-.content {
+body {
 	--yellow: #fed100;
 	--black: #333333;
 	--red: #ff352b;
