--- a/css/banner.css
+++ b/css/banner.css
@@ -39,13 +39,12 @@
 .banner__content {
 	margin-top: 4rem;
 	display: flex;
-}
-.banner__info {
-	flex: 0 1 50%;
+	flex: 1 1 50%;
 }
 .banner__title {
 	font-size: 4.5rem;
 	font-weight: 700;
+	max-width: 30rem;
 }
 .banner__subtitle {
 	margin-top: 1.5rem;
@@ -78,10 +77,10 @@
 	gap: 0.5rem;
 }
 .banner__image {
-	margin-top: -6rem;
-	max-width: 35rem;
+	margin: -9rem auto 0;
 	position: relative;
 	z-index: 0;
+	max-width: 34rem;
 }
 .banner__image img {
 	width: 100%;
@@ -106,28 +105,21 @@
 		display: none;
 	}
 	.banner__content {
+		display: block;
 		text-align: center;
-		display: flex;
-		flex-wrap: wrap;
 	}
 	.banner__title {
-		font-size: 3.5rem;
-	}
-	.banner__subtitle {
-		font-size: 2.25rem;
+		display: inline-block;
+		text-align: center;
 	}
 	.banner__bullets {
-		margin: 4rem auto;
-	}
-	.banner__info {
-		flex: 1 1;
+		margin: 3rem auto 4rem;
 	}
 	.banner__image {
-		display: block;
+		display: flex;
+		order: 1;
 		margin: -5rem auto 0;
-	}
-	.banner__button {
-		margin-top: 0;
+		margin-top: -7rem;
 	}
 }
 
@@ -135,11 +127,8 @@
 	.banner__content {
 		margin-top: 2rem;
 	}
-	.header {
-		align-items: center;
-	}
 	.header__phone {
-		font-size: 1.2rem;
+		display: none;
 	}
 	.banner__title {
 		font-size: 3rem;
@@ -149,13 +138,9 @@
 		font-size: 1.8rem;
 	}
 	.banner__bullets {
-		margin: 2rem 0;
-		flex-wrap: wrap;
-		gap: 0.5rem;
-		text-align: left;
-		max-width: 12rem;
+		display: none;
 	}
-	.banner__icon img {
-		width: 45px;
+	.banner__image {
+		margin-top: -2.5rem;
 	}
 }
