--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 @import "./reset.css";
 @import "./banner.css";
 @import "./stages.css";
 @import "./prices.css";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import "./autopark.css";
 body {
 	--yellow: #fed100;
 	--black: #333333;
