--- a/css/autopark.css
+++ b/css/autopark.css
@@ -5,6 +5,7 @@
 .autopark__container {
 	max-width: 85rem;
 	margin: 0 auto;
+	padding: 0 1rem;
 }
 .autopark__title {
 	margin-bottom: 1rem;
@@ -72,10 +73,7 @@
 	font-weight: 500;
 }
 .autopark__image {
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
+	max-width: 40rem;
 }
 .autopark__image img {
-	margin: 0 auto;
 }
