--- a/css/banner.css
+++ b/css/banner.css
@@ -76,6 +76,9 @@
 	font-weight: 400;
 	gap: 0.5rem;
 }
+.banner__image-adaptive {
+	display: none;
+}
 .banner__image {
 	margin: -9rem auto 0;
 	position: relative;
@@ -112,14 +115,21 @@
 		display: inline-block;
 		text-align: center;
 	}
-	.banner__bullets {
-		margin: 3rem auto 4rem;
+	.banner__image-adaptive {
+		display: block;
+		margin: -3rem auto 0rem;
+		max-width: 23rem;
 	}
-	.banner__image {
-		display: flex;
-		order: 1;
-		margin: -5rem auto 0;
-		margin-top: -7rem;
+	.banner__image-adaptive img {
+		width: 100%;
+		margin-left: 2rem;
+	}
+	.banner__button {
+		margin-top: 0rem;
+	}
+	.banner__bullets {
+		margin: 3rem auto 0rem;
+		padding: 0 0 4rem 0;
 	}
 }
 
