--- a/css/autopark.css
+++ b/css/autopark.css
@@ -56,6 +56,9 @@
 	font-size: 1rem;
 	margin-bottom: 2rem;
 }
+.autopark__info-adaptive {
+	display: none;
+}
 .autopark__button {
 	margin: 0 auto;
 	background-color: var(--yellow);
@@ -79,5 +82,77 @@
 @media (max-width: 810px) {
 	.autopark__info {
 		display: none;
+	}
+	.autopark__subtitle {
+		margin-bottom: 2.5rem;
+	}
+	.autopark__item {
+		border: none;
+	}
+	.autopark__item:hover {
+		border: none;
+		border-bottom: 1px solid var(--yellow);
+	}
+	.autopark__item:hover p {
+		font-weight: 500;
+	}
+	.autopark__item p {
+		font-weight: 400;
+		font-size: 1.5rem;
+		margin: 1rem;
+	}
+	.autopark__content {
+		display: block;
+	}
+	.autopark__image {
+		margin: 0 auto;
+	}
+	.autopark__info-adaptive {
+		margin: 0 auto;
+		display: block;
+	}
+	.autopark__info-adaptive p {
+		text-align: center;
+		font-size: 1.25rem;
+		font-weight: 400;
+	}
+	.autopark__info-adaptive li::before {
+		content: url(../img/autopark/point.png);
+	}
+	.autopark__info-adaptive ul {
+		margin: 0 auto;
+		max-width: 15rem;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.autopark__info-adaptive li:hover {
+		content: url(../img/autopark/around-point1.png);
+	}
+}
+@media (max-width: 510px) {
+	.autopark__item p {
+		font-weight: 400;
+		font-size: 1.25rem;
+		margin: 1rem;
+	}
+	.autopark__title {
+		font-size: 1.8rem;
+	}
+	.autopark__subtitle {
+		font-size: 1.4rem;
+		margin-bottom: 2rem;
+	}
+}
+@media (max-width: 380px) {
+	.autopark__item p {
+		font-size: 1rem;
+	}
+	.autopark__title {
+		font-size: 1.5rem;
+	}
+	.autopark__subtitle {
+		font-size: 1.25rem;
+		margin-bottom: 1rem;
 	}
 }
