--- a/css/banner.css
+++ b/css/banner.css
@@ -1,3 +1,12 @@
+body {
+	--yellow: #fed100;
+	--black: #333333;
+	--red: #ff352b;
+	--white: #f2f2f2;
+}
+a {
+	color: var(--black);
+}
 .banner {
 	font-size: 16px;
 	background-color: var(--yellow);
@@ -28,6 +37,10 @@
 	font-size: 1rem;
 	gap: 2rem;
 	align-items: center;
+}
+.header__menu li:hover {
+	color: var(--red);
+	cursor: pointer;
 }
 .header__link {
 }
