--- a/css/stages.css
+++ b/css/stages.css
@@ -1,19 +1,17 @@
 .stages {
 }
 .stages__container {
-	margin: 0 auto 6.4rem;
+	margin: 6rem auto 6.4rem;
 	padding: 0 1rem;
-	color: var(--black);
-	font-family: "Montserrat", sans-serif;
 	max-width: 85rem;
 }
-.stages__title {
-	margin: 6rem 0 3.75rem 0;
+.title {
 	font-weight: 600;
 	font-size: 2rem;
 	text-align: center;
 }
 .stages__items {
+	margin-top: 3.75rem;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
