--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,14 @@
 @import "./prices.css";
 @import "./autopark.css";
 @import "./reviews.css";
+body {
+	--yellow: #fed100;
+	--black: #333333;
+	--red: #ff352b;
+	--white: #f2f2f2;
+	font-family: 'Montserrat';
+	color: var(--black);
+}
+a {
+	color: var(--black);
+}
