--- a/css/stages.css
+++ b/css/stages.css
@@ -1,8 +1,8 @@
 .stages {
 }
 .stages__container {
-	margin: 6rem auto 6.4rem;
-	padding: 0 1rem;
+	margin: 0 auto;
+	padding: 6rem 1rem 3.2rem;
 	max-width: 85rem;
 }
 .title {
