--- a/css/reviews.css
+++ b/css/reviews.css
@@ -50,15 +50,15 @@
 	font-weight: 400;
 	cursor: pointer;
 }
-/* .reviews__all {
+.reviews__all {
 	text-align: center;
 }
 .reviews__all p {
 	display: inline-block;
-	padding: 0.8rem 6rem;
+	padding: 0.8rem 4rem;
 	border: 1px solid var(--black);
 	cursor: pointer;
-} */
+}
 @media (max-width: 1130px) {
 	.reviews__row {
 		flex-wrap: wrap;
@@ -68,9 +68,3 @@
 		margin-bottom: 4rem;
 	}
 }
-/* @media (max-width: 771px) {
-	.reviews__row {
-		margin-right: 1.25rem;
-		margin-bottom: 1.25rem;
-	}
-} */
