--- a/css/reviews.css
+++ b/css/reviews.css
@@ -50,6 +50,22 @@
 	font-weight: 400;
 	cursor: pointer;
 }
+.reviews__points li::before {
+	content: url(../img/reviews/point.png);
+}
+.reviews__points ul {
+	margin: 0 auto;
+	max-width: 15rem;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.reviews__points li:hover {
+	content: url(../img/reviews/around-point.png);
+}
+.reviews__points {
+	display: none;
+}
 .reviews__all {
 	text-align: center;
 }
@@ -66,5 +82,10 @@
 	}
 	.reviews__item:not(:last-child) {
 		margin-bottom: 4rem;
+	}
+	.reviews__points {
+		margin-top: -1rem;
+		margin-bottom: 2.5rem;
+		display: block;
 	}
 }
