--- a/css/forms.css
+++ b/css/forms.css
@@ -155,28 +155,30 @@ select {
 		text-align: center;
 	}
 	.forms__name-and-tel {
+		margin-bottom: 3.8rem;
 		text-align: center;
 	}
 	.forms__name {
 		margin-right: 0;
 		width: 35rem;
+		margin-bottom: 1.4rem;
 	}
 	.forms__tel {
 		width: 35rem;
 	}
+	.forms__button-send {
+		margin: 0 auto;
+	}
 	.forms__button {
-		display: none;
 		padding: 1rem 3rem;
 		font-size: 1rem;
 		outline: var(--yellow) solid 2px;
 	}
 	.forms__note-buttons {
-		display: none;
 		margin-top: 1rem;
 		display: flex;
 	}
 	.forms__note-buttons p {
-		display: none;
 		padding-top: 0.2rem;
 		font-weight: 400;
 		font-size: 0.75rem;
